--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <java.version>17</java.version>
         <spring-boot.version>3.1.5</spring-boot.version>
         <beam.version>2.56.0</beam.version>
+        <jackson.version>2.15.3</jackson.version>
         <junit.version>4.13.2</junit.version>
     </properties>
 
@@ -63,13 +64,13 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.15.3</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.15.3</version> <!-- Use a version compatible with your Jackson version -->
+            <version>${jackson.version}</version> <!-- Use a version compatible with your Jackson version -->
         </dependency>
 
         <dependency>
@@ -85,7 +86,6 @@
             <version>${beam.version}</version>
             <scope>test</scope>
         </dependency>
-
 
         <!-- JUnit for Testing -->
 
